--- a/arch/arm/boot/dts/qcom/kenzo/msm8956-kenzo.dtsi
+++ b/arch/arm/boot/dts/qcom/kenzo/msm8956-kenzo.dtsi
@@ -236,7 +236,19 @@
 			< 432000000   6 >,  /* NOM       */
 			< 480000000   7 >,  /* Turbo     */
 			< 550000000   8 >,  /* Super Turbo */
-			< 600000000   9 >;  /* Super Turbo */
+			< 621330000   9 >;  /* Super Turbo */
+		qcom,gfxfreq-corner-v1 =
+			<         0   0 >,
+			< 133333333   1 >,  /* Min SVS   */
+			< 200000000   2 >,  /* Low SVS   */
+			< 266666667   3 >,  /* SVS Minus */
+			< 300000000   4 >,  /* SVS       */
+			< 366670000   5 >,  /* SVS Plus  */
+			< 432000000   6 >,  /* NOM       */
+			< 480000000   7 >,  /* Turbo     */
+			< 550000000   8 >,  /* Super Turbo */
+			< 621330000   9 >;  /* Super Turbo */
+
 		#clock-cells = <1>;
 	};
 
